# rust_axum_ros2_training

./: Cargo.toml  README.md  package.xml
.cargo/: config.toml
docker/: docker-compose.yml
docker/ros2/: .rosrc  Dockerfile  requirements.txt
rust_axum_ros2/: CMakeLists.txt  Cargo.toml  package.xml
rust_axum_ros2/src/: error.rs  gateway.rs  lib.rs  logger.rs  main.rs  trajectory.rs
rust_axum_ros2_training/: CMakeLists.txt  Cargo.toml
rust_axum_ros2_training/src/: gateway.rs  main.rs  task.rs  user.rs
src/: gateway.rs  lib.rs  main.rs  node.rs
