[workspace]
resolver = "2"
members = [
    "thirdparty/arci",
    "thirdparty/arci_ros2",
    "rust_axum_ros2_training",
]

[workspace.dependencies]
arci = { version = "0.1.0", path = "./thirdparty/arci" }
arci_ros2 = { version = "0.1.0", path = "./thirdparty/arci_ros2" }
anyhow = "1"
axum = "0.7"
futures = "0.3"
r2r = "0.8"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"
