[workspace]
resolver = "2"
members = [
    "thirdparty/arci",
    "thirdparty/arci-ros2",
    "rust_axum_ros2",
]

[workspace.dependencies]
arci = { version = "0.1.0", path = "./thirdparty/arci" }
arci-ros2 = { version = "0.1.0", path = "./thirdparty/arci-ros2" }
anyhow = "1"
axum = "0.7"
futures = "0.3"
log = "0.4"
fern = {version = "0.6", features = ["colored"] }
chrono = "0.4"
r2r = "0.8"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"
