[package]
name = "rust_axum_ros2"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
arci-ros2.workspace = true
axum.workspace = true
futures.workspace = true
r2r.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true