<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rust_axum_ros2</name>
  <version>0.0.1</version>
  <description>rust axum ros2 training</description>
  <maintainer email="t.sato17123@gmail.com">Takashi Sato</maintainer>
  <license>TODO</license>
  <author>Takashi Sato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
