[package]
name = "rust_axum_ros2_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.8"
arci_ros2 = { version = "0.1.0", path = "../thirdparty/arci_ros2" }
futures = "0.3.15"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"